# sllar-server

./: .gitignore  .travis.yml  README.md  sllar-server.cabal
client/: LICENSE  sllar-client.cabal
client/resources/: config  sllarrc
client/src/: Common.hs  Config.hs  ConfigReader.hs  Examination.hs  ExternalPackage.hs  Main.hs  Package.hs  PackageList.hs  Paths_sllar_client.hs  main.hs
research/: get_url.hs  links.txt  template.hs
research/missing_fields/: missing_fields.hs  missing_fields.json
server/: sllar-server.cabal
server/fixtures/: example.yaml  packages.json
server/html/: index.html
server/resources/html/: index.html
server/resources/templates/: header.template  help.template  info.template
server/spec/: Makefile  PackageSpec.hs
server/spec/fixtures/: list.sllar  wrong_example.yaml
server/src/: Common.hs  Config.hs  Database.hs  Examination.hs  ExposedPackage.hs  Heredoc.hs  Json.hs  Main.hs  Package.hs  PackageSpec.hs  Paths_sllar_server.hs  Server.hs  Settings.hs  SllarPackage.hs  Templates.hs  Version.hs  main.hs  server.hs
server/src/Package/: Export.hs  Import.hs
server/src/Sllar/: Common.hs  Server.hs
spec/: PackageSpec.hs
src-exec/: Main.hs
src/Sllar/: Config.hs  Database.hs  Examination.hs  Heredoc.hs  Templates.hs
src/Sllar/Package/: Export.hs  Import.hs
