Name:             sllar-client
Version:          0.0.0.1
Author:           Serge Gerasimov
Maintainer:       mail@grsmv.com
Description:      Package system for SeqeunceL programming language. Client
Homepage:         https://github.com/grsmv/sllar
License:          MIT
Build-type:       Simple
Cabal-version:    >=1.8

Flag Debug
  Description:    Enable debug support
  Default:        False

Executable sllar
  Main-is:        Main.hs
  hs-source-dirs: src

  Build-depends:
    aeson,
    base,
    directory,
    tar

  if flag(debug)
    CC-Options:   "-DDEBUG"
    GHC-Options:  "-DDEBUG"

  ghc-options:    -Wall -fwarn-tabs -threaded -O
