name:               sllar-client
version:            0.0.0.1
author:             Serge Gerasimov
maintainer:         Serge Gerasimov <mail@grsmv.com>
synopsis:           Package system for SeqeunceL programming language. Server
description:        Cabal-like package system for SeqeunceL programming language. Client component. It allows to install, create and upload SequenceL packages (libraries).
category:           Utilities
homepage:           https://github.com/grsmv/sllar
license:            MIT
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.8

data-dir:           resources
data-files:         sllarrc
extra-source-files: src/*.hs

Executable sllar
  Main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Paths_sllar_client

  Build-depends:
    aeson,
    ansi-terminal,
    base,
    bytestring,
    directory,
    ghc-prim,
    split,
    tar,
    yaml

  ghc-options:      -Wall -fwarn-tabs -threaded -O
