name:               sllar-server
version:            0.0.0.1
author:             Serge Gerasimov
maintainer:         mail@grsmv.com
synopsis:           Package system for SeqeunceL programming language. Server
description:        Cabal-like package system for SeqeunceL programming language. Server component. It allows to create and maintain package repositories.
category:           Utilities
homepage:           https://github.com/grsmv/sllar
license:            MIT
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.8

data-dir:           resources
data-files:         html/*.html packages/.keep
extra-source-files: src/*.hs

Executable sllar-server
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Paths_sllar_server

  Build-depends:
    aeson,
    base,
    directory,
    hdaemonize,
    network,
    process,
    tar,
    unix

  ghc-options:      -Wall -fwarn-tabs -threaded
