name:               sllar-server
version:            0.0.0.1
author:             Serge Gerasimov
maintainer:         Serge Gerasimov <mail@grsmv.com>
synopsis:           Package system for SeqeunceL programming language. Server
description:
  Cabal-like package system for SeqeunceL programming language. Server component.
  It allows to create and maintain package repositories.
category:           Utilities
homepage:           https://github.com/grsmv/sllar
license:            MIT
license-file:       LICENSE
build-type:         Simple
cabal-version:      >=1.8

data-dir:           resources
data-files:         html/*.html tmp/.keep config
                    packages/erato/erato-0.0.1.sllar.tar
                    packages/erato/erato-0.0.2.sllar.tar
                    packages/list/list-0.0.1.sllar.tar
extra-source-files: src/*.hs

Executable sllar-server
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Paths_sllar_server

  Build-depends:
    aeson,
    ansi-terminal,
    base,
    base64-bytestring,
    bytestring,
    datetime,
    directory,
    ghc-prim,
    hdaemonize,
    MissingH,
    network,
    process,
    regex-posix,
    sqlite,
    syb,
    tar,
    template,
    temporary,
    unix,
    yaml

  ghc-options:      -Wall -fwarn-tabs -threaded
